--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^1.2.6",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-menu/menu": "^1.1.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.20",
     "expo-asset": "~10.0.10",
