--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.74.3",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-material-menu": "^2.0.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
