--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "expo-blur": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
