--- a/app.json
+++ b/app.json
@@ -24,11 +24,13 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
+      ["expo-router", {
+        "origin": "https://devwahmad.com"
+      }],
       "expo-asset",
       "expo-secure-store"
     ],
