--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-menu/menu": "^1.1.2",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.51.9",
     "expo": "~51.0.20",
     "expo-asset": "~10.0.10",
     "expo-av": "^14.0.6",
+    "expo-blur": "~13.0.2",
     "expo-dev-client": "~4.0.20",
     "expo-font": "~12.0.8",
     "expo-linking": "~6.3.1",
@@ -39,8 +41,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "zustand": "^4.5.4",
-    "expo-blur": "~13.0.2"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
