implement lock screen ui with biometric and code authentication

--- a/app.json
+++ b/app.json
@@ -32,7 +32,13 @@
         "origin": "https://devwahmad.com"
       }],
       "expo-asset",
-      "expo-secure-store"
+      "expo-secure-store",
+      [
+        "expo-local-authentication",
+        {
+          "facePermission": "Allow ${PRODUCT_NAME} to use Face ID"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
