--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "victory-native": "^41.0.2",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "expo-local-authentication": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
