--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-web": "~0.19.10",
     "victory-native": "^41.0.2",
     "zustand": "^4.5.4",
-    "expo-local-authentication": "~14.0.1"
+    "expo-local-authentication": "~14.0.1",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
