added missing states types

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "expo-dev-client": "~4.0.20",
     "expo-font": "~12.0.8",
     "expo-haptics": "~13.0.1",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-local-authentication": "~14.0.1",
     "expo-router": "~3.5.18",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
@@ -45,9 +47,7 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "victory-native": "^41.0.2",
-    "zustand": "^4.5.4",
-    "expo-local-authentication": "~14.0.1",
-    "expo-image-picker": "~15.0.7"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
